--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,18 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>nl.bos</groupId>
-    <artifactId>DQL Tester 16.4</artifactId>
+    <artifactId>DQLTester</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
+    </build>
+
     <dependencies>
         <dependency>
             <groupId>org.projectlombok</groupId>
