--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>nl.bos</groupId>
-    <artifactId>DQLTester</artifactId>
+    <artifactId>DQLTesterFX</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <build>
@@ -33,16 +33,6 @@
                         <exclude>**/dfc.properties</exclude>
                         <exclude>**/log4j.properties</exclude>
                     </excludes>
-                    <archive>
-                        <manifest>
-                            <addClasspath>true</addClasspath>
-                            <classpathPrefix>lib/</classpathPrefix>
-                            <mainClass>nl.bos.Main</mainClass>
-                        </manifest>
-                        <manifestEntries>
-                            <Class-Path>config/</Class-Path>
-                        </manifestEntries>
-                    </archive>
                 </configuration>
             </plugin>
         </plugins>
