--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>nl.bos</groupId>
     <artifactId>DQLTesterFX</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>v0.1-alpha</version>
 
     <build>
         <resources>
