Played with Monocle to start with headless gui testing, but failed on openJDK 11 with missing .dll files. Next try is on openJDK 12 https://bugs.openjdk.java.net/browse/JDK-8201539

--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,13 @@
             <artifactId>javafx-fxml</artifactId>
             <version>11</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.testfx/openjfx-monocle -->
+        <dependency>
+            <groupId>org.testfx</groupId>
+            <artifactId>openjfx-monocle</artifactId>
+            <version>jdk-11+23</version>
+            <scope>test</scope>
+        </dependency>
         <!--<dependency>-->
         <!--<groupId>org.projectlombok</groupId>-->
         <!--<artifactId>lombok</artifactId>-->
