--- a/pom.xml
+++ b/pom.xml
@@ -105,24 +105,24 @@
         </dependency>
         <!-- DFC -->
         <dependency>
-        	<groupId>com.documentum</groupId>
-        	<artifactId>dfc</artifactId>
-        	<version>7.2</version>
-        </dependency>
-        <dependency>
-        	<groupId>apache-log4j</groupId>
-        	<artifactId>log4j</artifactId>
-        	<version>1.2.15</version>
-        </dependency>
-        <dependency>
-        	<groupId>commons-lang</groupId>
-        	<artifactId>commons-lang</artifactId>
-        	<version>2.4</version>
+            <groupId>com.documentum</groupId>
+            <artifactId>dfc</artifactId>
+            <version>16.4.0000.0185</version>
         </dependency>
         <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>tools</artifactId>
-            <version>1.8.11</version>
+            <version>1.8.10</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.13</version>
         </dependency>
         <dependency>
             <groupId>com.rsa</groupId>
@@ -133,6 +133,11 @@
             <groupId>com.rsa</groupId>
             <artifactId>cryptoj</artifactId>
             <version>6.2.2</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.0</version>
         </dependency>
     </dependencies>
 </project>
