--- a/pom.xml
+++ b/pom.xml
@@ -105,35 +105,11 @@
         </dependency>
         <!-- DFC -->
         <dependency>
-            <groupId>com.documentum</groupId>
+            <groupId>com.emc.documentum.dfc</groupId>
             <artifactId>dfc</artifactId>
             <version>16.4.0000.0185</version>
         </dependency>
-        <dependency>
-            <groupId>org.aspectj</groupId>
-            <artifactId>tools</artifactId>
-            <version>1.8.10</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache</groupId>
-            <artifactId>commons-lang</artifactId>
-            <version>2.4</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.13</version>
-        </dependency>
-        <dependency>
-            <groupId>com.rsa</groupId>
-            <artifactId>certj</artifactId>
-            <version>6.2.1</version>
-        </dependency>
-        <dependency>
-            <groupId>com.rsa</groupId>
-            <artifactId>cryptoj</artifactId>
-            <version>6.2.2</version>
-        </dependency>
+
         <dependency>
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
