Made stuff look a bit nicer now...

--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,11 @@
             <version>11</version>
         </dependency>
         <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
+        <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
             <version>11</version>
