About implemented with links to github. Next is the shortcut keys help

--- a/src/main/resources/project.properties
+++ b/src/main/resources/project.properties
@@ -1,2 +1,6 @@
 version=${project.version}
 artifactId=${project.artifactId}
+url.whats_new=https://github.com/HetBenkt/DQL-Tester-FX/releases
+url.feeback=https://github.com/HetBenkt/DQL-Tester-FX/issues/new
+url.contribute=https://github.com/HetBenkt/DQL-Tester-FX/blob/master/CONTRIBUTING.md
+url.license=https://github.com/HetBenkt/DQL-Tester-FX/blob/master/LICENSE
