--- a/src/main/resources/project.properties
+++ b/src/main/resources/project.properties
@@ -4,3 +4,5 @@ url.whats_new=https://github.com/HetBenkt/DQL-Tester-FX/releases
 url.feeback=https://github.com/HetBenkt/DQL-Tester-FX/issues/new
 url.contribute=https://github.com/HetBenkt/DQL-Tester-FX/blob/master/CONTRIBUTING.md
 url.license=https://github.com/HetBenkt/DQL-Tester-FX/blob/master/LICENSE
+url.help=https://github.com/HetBenkt/DQL-Tester-FX/wiki/Help
+url.shortcut_keys=https://github.com/HetBenkt/DQL-Tester-FX/wiki/Shortcut-keys
